[BUGFIX] Add missing color information for navbar toggler in bs3

--- a/Resources/Public/Css/bootstrap3-rte.css
+++ b/Resources/Public/Css/bootstrap3-rte.css
@@ -8657,6 +8657,16 @@ body,
   transform: rotate(0);
   top: 6px;
 }
+.navbar-default .navbar-toggler,
+.navbar-default-transition .navbar-toggler,
+.navbar-default-transition.navbar-transition .navbar-toggler {
+  color: #333;
+}
+.navbar-inverse .navbar-toggler,
+.navbar-inverse-transition .navbar-toggler,
+.navbar-inverse-transition.navbar-transition .navbar-toggler {
+  color: #ccc;
+}
 .navbar-transition .navbar-brand {
   height: 70px;
 }
