--- a/Resources/Public/Less/Theme/navbar.less
+++ b/Resources/Public/Less/Theme/navbar.less
@@ -526,6 +526,16 @@
         top: 6px;
     }
 }
+.navbar-default {
+    .navbar-toggler {
+        color: @navbar-default-color;
+    }
+}
+.navbar-inverse {
+    .navbar-toggler {
+        color: @navbar-inverse-color;
+    }
+}
 
 
 //
